* 2007-10-16 - thorben.betten@open-xchange.com

 - Bugfix #9501: Proper setting of IMAP timeout values in properties

* 2007-10-12 - marcus.klein@open-xchange.com

 - Bugfix #9790: Added delete event for contexts. Its listeners remove the file
   storage.

* 2007-10-12 - thorben.betten@open-xchange.com

 - Bugfix #9787: Checking right table when looking for user's default
   infostore folder on context deletion

* 2007-10-11 - thorben.betten@open-xchange.com

 - Bugfix #9769: Overriding IMAPFolder.exists() method in NamespaceFolder
   to prevent a NPE on namespace folder update
 - Bugfix #9756: Fallback implementation if UID EXPUNGE is not supported by
   IMAP server

* 2007-10-10 - thorben.betten@open-xchange.com

 - Bugfix #9751: Fixed non-appearing shared mail folders
 - Bugfix #9750: Avoid annoying error logging whenever an ACL entity cannot
   be mapped to system user

* 2007-10-08 - thorben.betten@open-xchange.com

 - Bugfix #9728: Proper check of intial ACls on mail folder creation

* 2007-10-05 - thorben.betten@open-xchange.com

 - Bugfix #9515: Additional check for user's module access prior to
   updating virtual list folders
 - Bugfix #9664: Fixed reges to check against IMAP folder's user flag
   support
 - Bugfix #9699: Removing only known entities from an IMAP folder's ACLs on
   update/create operation

* 2007-09-26 - marcus.klein@open-xchange.com

 - Bugfix #9638: Renaming infostore user folder if user is deleted.

* 2007-09-17 - martin.kauss@open-xchange.com

 - Fixed bug #9497. Recurring appointments with a start before 1970 caused a
   NullPointer by viewing the detail page of a single occurrence. This has been
   fixed.

* 2007-09-17 - marcus.klein@open-xchange.com

 - Bugfix #9475: Improved VCardTokenizer to use byte arrays instead of Byte
   lists.

* 2007-09-14 - ben.pahne@open-xchange.com

 - Fixed Bug #9466 - User was able to move his
   contact out of the global address book.

* 2007-09-13 - marcus.klein@open-xchange.com
