@@ -1,6 +1,8 @@
 * 2007-10-16 - thorben.betten@open-xchange.com
 
  - Bugfix #9501: Proper setting of IMAP timeout values in properties
+ - Bugfix #9700: Applying sent order direction when displaying unread
+   messages
 
 * 2007-10-12 - marcus.klein@open-xchange.com
 
